# multimodal-transformation

./: .gitignore  LICENSE  README.md  example.py  example_complete_data_set.py  multimodal_transformation.py  pyproject.toml
evaluation/: ctrees_evaluation.py  data_loader.py  lasso_binary_classification.py  optimize_ctrees.py
multimodal_transformation/: ideal_distribution_generator.py  multimodal_transformation.py
tests/: test_multimodal_transformation.py
